utilizando gap en el ul en vez margin en el li para ajustar correctamente los elementos

--- a/css/header.css
+++ b/css/header.css
@@ -70,10 +70,10 @@ nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    gap: 1.3rem; /* Agregar un espacio de 10px entre los elementos */
 }
 
 nav ul li {
-    margin: 0 10px;
     transition: transform 0.1s ease-in; /* Para que la transición sea más suave */
 }
 
